--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>CS4641 Project Proposal: Flight Delay Predictor</h1>
 
     <h3>Introduction/Background</h3>
-    <p>There exist sites, like <a href="https://wingman.wtf/">wingman.wtf</a> and <a href="https://www.knowdelay.com/index.html">knowdelay.com</a> that predict flight delays but are often too inaccurate to fully rely on. Scholarly articles that detail the use of ML in predicting flight delays generally focus on a single airport or airline, and use regression models like decision trees <sup>[1]</sup>.</p>
+    <p>There exist sites, like <a href="https://wingman.wtf/">wingman.wtf</a> and <a href="https://www.knowdelay.com/index.html">knowdelay.com</a> that predict flight delays but are often too inaccurate to fully rely on. Scholarly articles that detail the use of ML in predicting flight delays generally focus on a single airport or airline, and use regression models like decision trees [1].</p>
 
     <h3>Problem Definition</h3>
     <p>Airline delays are a frustration for passengers, and because of the few resources available to accurately forecast potential delays, through this project, we aim to help travelers determine when delays are most likely to occur, and airports and airlines provide more reliable information about their operations.</p>
@@ -43,28 +43,29 @@
     <h3>Methods</h3>
     <h4>Data Preprocessing Methods</h4>
     <ul>
-        <li>Data cleaning: will ensure that our data is free of outliers or incorrect/null data. We'll use the Pandas library, including dropna() and drop_duplicates(), to do this effectively.</li>
-        <li>Feature transformation: to adjust data to best fit the strengths, weaknesses, and biases of our model/dataset. For example, we may use the log transformation technique from scikit-learn to normalize right-skewed data.</li>
-        <li>Dimensionality reduction: to prevent overfitting while still considering the impact of eliminating features on the accuracy of our model <sup>[2]</sup>.</li>
+        <li><b>Data cleaning</b> will ensure that our data is free of outliers or incorrect/null data. We'll use the Pandas library, including dropna() and drop_duplicates(), to do this effectively.</li>
+        <li>We will use <b>feature transformation</b> to adjust data to best fit the strengths, weaknesses, and biases of our model/dataset. For example, we may use the log transformation technique from scikit-learn to normalize right-skewed data.</li>
+        <li>We will use <b>dimensionality reduction</b> to prevent overfitting while still considering the impact of eliminating features on the accuracy of our model [2].</li>
     </ul>
 
     <h4>ML Algorithms/Models (supervised only)</h4>
     <ul>
-        <li>Gradient-boosted decision trees</li>
-        <li>Hierarchical clustering</li>
-        <li>Support vector machines</li>
+        <li><b>Gradient-boosted decision trees</b> are an effective model for flight delay predictors, and are suitable for our project because of their ability to accurately which features contribute most to flight delays [3]</li>
+        <li>In a second approach, we plan to use <b>hierarchical clustering</b> to determine the ideal size and number of intervals to accurately predict delays (e.g. 0-10 min delay, or 0-30 min delay?)</li>
+        <li>Finally, for our binary classification approach, we plan to use <b>support vector machines</b> to best divide flights where a delay will and will not likely occur.</li>
     </ul>
 
     <h3>Potential Results and Discussion</h3>
     <h4>3+ Quantitative Metrics</h4>
     <ul>
-        <li>Mean-squared error (MSE)</li>
-        <li>Mean absolute deviation (MAD)</li>
-        <li>Rand Score and F1 score</li>
+        <li>For a linear regression model, <b>mean-squared error (MSE)</b> will effectively measure our accuracy while incentivizing few large errors (i.e. predicting no delay when in fact a 24-hour delay occurred).</li>
+        <li>We will also consider <b>mean absolute deviation (MAD)</b>. However, we will prioritize minimizing MSE, which is more punitive of exceptionally large residuals than MAD, thereby creating more helpful predictions.</li>
+        <li>For our clustering and classification approaches, we will consider <b>Rand Score</b> and <b>F1 score</b> to evaluate accuracy.</li>
     </ul>
 
     <h3>Project Goals</h3>
-    <p>Create a regression model that accurately predicts length of flight delays, and create an accurate classification model that predicts existence of flight delays.</p>
+        <li>Create a regression model that accurately predicts length of flight delays -> ex. Adjusted R2 > ~0.9 (dependent on MSE)</li>
+        <li>Create an accurate classification model that predicts existence of flight delays -> ex. F1 score > ~ 0.75</li>
 
     <h3>Expected Results</h3>
     <ul>
@@ -74,9 +75,9 @@
     </ul>
 
     <h3>References</h3>
-        <li>[1] H. Khaksar and A. Sheikholeslami, “Airline delay prediction by machine learning algorithms,” Scientia Iranica, vol. 0, no. 0, pp. 0–0, Dec. 2017. doi:10.24200/sci.2017.20020</li>
-        <li>[2] H. S. Obaid, S. A. Dheyab and S. S. Sabry, "The Impact of Data Pre-Processing Techniques and Dimensionality Reduction on the Accuracy of Machine Learning," 2019 9th Annual Information Technology, Electromechanical Engineering and Microelectronics Conference (IEMECON), Jaipur, India, 2019, pp. 279-283, doi: 10.1109/IEMECONX.2019.8877011.</li>
-        <li>[3] S. Manna, S. Biswas, R. Kundu, S. Rakshit, P. Gupta and S. Barman, "A statistical approach to predict flight delay using gradient boosted decision tree," 2017 International Conference on Computational Intelligence in Data Science(ICCIDS), Chennai, India, 2017, pp. 1-5, doi: 10.1109/ICCIDS.2017.8272656.</li>
+        <p>[1] H. Khaksar and A. Sheikholeslami, “Airline delay prediction by machine learning algorithms,” Scientia Iranica, vol. 0, no. 0, pp. 0–0, Dec. 2017. doi:10.24200/sci.2017.20020</p>
+        <p>[2] H. S. Obaid, S. A. Dheyab and S. S. Sabry, "The Impact of Data Pre-Processing Techniques and Dimensionality Reduction on the Accuracy of Machine Learning," 2019 9th Annual Information Technology, Electromechanical Engineering and Microelectronics Conference (IEMECON), Jaipur, India, 2019, pp. 279-283, doi: 10.1109/IEMECONX.2019.8877011.</p>
+        <p>[3] S. Manna, S. Biswas, R. Kundu, S. Rakshit, P. Gupta and S. Barman, "A statistical approach to predict flight delay using gradient boosted decision tree," 2017 International Conference on Computational Intelligence in Data Science(ICCIDS), Chennai, India, 2017, pp. 1-5, doi: 10.1109/ICCIDS.2017.8272656.</p>
 
     <h2>Gantt Chart</h2>
     <p><a href="https://docs.google.com/spreadsheets/d/1DOtCJ0PgNM5uBerABgMfCDr11GxqrQK8Jsl495TC0UA/edit?usp=sharing">Linked Here</a></p>
