Update latex syntax

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h4>Analysis of Regression Model</h4>
     <ul>
         <li>For a linear regression model, <b>mean-squared error (MSE)</b> will effectively measure our accuracy while incentivizing few large errors (i.e. predicting no delay when in fact a 24-hour delay occurred).</li>
-        <li>The mean square error (MSE) of the model run with all 11 features was 5333.013819648823, while the coefficient of determination ($R^2$) was 0.020891585241412658. The MSE of the model with 7 features was 5369.736086878915, while the $R^2$ was 0.014149603677156453, indicating that 11 features is a better fit. However, all of these error values are very high, indicating that linear regression is likely not a good model to use for predicting flight delays.</li>
+        <li>The mean square error (MSE) of the model run with all 11 features was 5333.013819648823, while the coefficient of determination (\(R^2\)) was 0.020891585241412658. The MSE of the model with 7 features was 5369.736086878915, while the \(R^2\) was 0.014149603677156453, indicating that 11 features is a better fit. However, all of these error values are very high, indicating that linear regression is likely not a good model to use for predicting flight delays.</li>
         <li>The following chart shows the actual vs predicted flight delays resulting from our model. While many of the delays are nearly accurate, there are also a significant proportion of outliers and points lying off the y=x line (100% accurate).</li>
     </ul>
 
